<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CC7</string>
    <string name="signin">Sign In</string>
    <string name="signup" tools:ignore="UnusedResources">Sign Up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Hi, welcome!</string>
    <string name="hello_blank_fragment" translatable="false" tools:ignore="UnusedResources">Hello blank fragment</string>
    <string name="already" tools:ignore="UnusedResources">Already Registered? Sign In!</string>
    <string name="not_registered">Not Registered Yet? Sign Up!</string>
    <!--    <string name="not_yet" tools:ignore="UnusedResources">Not Registered Yet? Sign Up!</string>-->
    <string name="hello" tools:ignore="UnusedResources">Hello</string>
    <string name="home">Home</string>
    <string name="deskripsi_disini" translatable="false">Deskripsi disini</string>
    <string name="tanggal_fav" translatable="false">05-05-2023</string>
    <string name="movietitlefav" translatable="false">MovieTitleFav</string>
    <string name="detail">detail</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="profile">Profile</string>
    <string name="username">username</string>
    <string name="full_name">Full name</string>
    <string name="born_date">Born date</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="movie_title">Movie title</string>
    <string name="movie_release">movie release</string>
    <string name="login_here">login here!</string>
</resources>